back to lazyvim

--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -221,3 +221,12 @@ tooltip label {
   color: #ffffff;
 }
 
+
+#custom-voxtype {
+  min-width: 12px;
+  margin: 0 0 0 7.5px;
+}
+
+#custom-voxtype.recording {
+  color: #a55555;
+}
